--- a/13- DevLinks/style.css
+++ b/13- DevLinks/style.css
@@ -46,3 +46,20 @@ body{
     line-height: 24px;
     margin-top: 8px;
 }
+
+/*Links*/
+
+
+ul{
+    list-style: none;
+}
+ul li{
+    border: 1px solid red;
+}
+
+ul li a{
+display: flex;
+align-items: center;
+justify-content: center;
+padding: 16px 24px ;
+}
