--- a/13- DevLinks/style.css
+++ b/13- DevLinks/style.css
@@ -6,16 +6,22 @@
     
 }
 
+
 :root{
     --text-color:white;
     --bg-url:url(assets/bg-oble.jpg);
     --stroke-color:rgba(255, 255, 255, 0.5);
-    
+    --surface-color:rgba(255, 255, 255, 0.5);
+    --surface-color-hover:rgba(0, 0, 0, 0.2);
+    --highlight-color:rgba(255, 255, 255, 0.2);
 }
 .light{
     --text-color:black;
     --bg-url:url(assets/br-mobile.jpg);
     --stroke-color:rgba(0, 0, 0, 0.5);
+    --surface-color:rgba(0, 0, 0, 0.5);
+    --surface-color-hover:rgba(0, 0, 0, 0.2);
+    --highlight-color:rgba(0, 0, 0, 0.1);
 }
 
 
@@ -40,9 +46,8 @@ body *{
     color: var(--text-color);
 }
 
-.rgbColor{
-    animation: coresRGB  5s linear infinite;  
-}
+
+
 
 #container{
 width: 360px;
@@ -68,11 +73,18 @@ padding: 0 24px;
     font-weight: 500;
     line-height: 24px;
     margin-top: 8px;
+
+}
+/*switch*/
+#switch button{
+  width: 32;  
+  height: 32;
+  background: #fff url(assets/moon-stars.svg) no-repeat center;
+  border: none;
+  border-radius: 50%;
 }
 
 /*Links*/
-
-
 ul{
     list-style: none;
     display: flex;
@@ -91,7 +103,7 @@ justify-content: center;
 padding: 16px 24px ;
 
 
-background:rgba(255, 255, 255, 0.1) ;
+background:var(--surface-color) ;
 border:1px solid var(--stroke-color);
 border-radius: 8px;
 
@@ -106,7 +118,7 @@ transition: background 0.2;
 
 /*HOUVER FAZ COM QUE AO PASSAR COM O MOUSE POR CIMA OCORRA UMA ACAO */
 ul li a:hover{
-    background: rgba(255, 255, 255, 0.1);  
+    background: var(--surface-color-hover);  
     border: 1px solid var(--text-color);
 }
 
@@ -128,15 +140,26 @@ ul li a:hover{
     border-radius: 50%;
 }
 #social-links a:hover{
-background: rgba(255, 255, 255, 0.1);
+background: var(--highlight-color);
+animation: pulse 1s infinite;
 }
 
 footer{
     padding: 24px 0;
     text-align: center;
 }
+.pFoo{
+    font-size: 25px;
+}
 
+.imag:hover{
+animation: pulse 1s infinite;
+border-radius: 50%;
+}
 
+.pHover:hover{
+    animation: coresRGB 10s infinite;
+}
 
 
 @keyframes coresRGB{
@@ -153,3 +176,20 @@ footer{
       color: rgb(255, 0, 0);
     }
   }
+
+  @keyframes pulse {
+    /*Diminui*/
+    0%{
+        transform: scale(0.9);
+        box-shadow: 0px 0px 0px 0px var(--surface-color-hover);
+    }
+    /*Almenta*/
+    70%{
+        transform: scale(1);
+        box-shadow: 0px 0px 0px 10px var(--surface-color-hover);
+    }
+    /*Diminui*/
+    100%{
+transform: scale(0.9);
+    }
+}
